@@ -794,23 +794,11 @@ my $dbh = db_connect ('mysql', $conf{'dbname'}, $conf{'dbhost'}, $conf{'dbport'}
 my $history_dbh = ($conf{'_history_db_enabled'} eq '1') ? db_connect ('mysql', $conf{'_history_db_name'},
 		$conf{'_history_db_host'}, '3306', $conf{'_history_db_user'}, $conf{'_history_db_pass'}) : undef;
 
-# Get a lock
-my $lock = db_get_lock ($dbh, 'pandora_db');
-if ($lock == 0 && $conf{'_force'} == 0) { 
-	log_message ('', " [*] Another instance of pandora_db seems to be running.\n\n");
-	exit 1;
-}
-
 # Main
 pandoradb_main(\%conf, $dbh, $history_dbh);
 
 # Cleanup and exit
 db_disconnect ($history_dbh) if defined ($history_dbh);
 db_disconnect ($dbh);
-
-# Release the lock
-if ($lock == 1) {
-	db_release_lock ($dbh, 'pandora_db');
-}
 
 exit 0;
